# pixel2mesh-with-depth

./: .flake8  .gitignore  Makefile  README.md  README_more.md  copy_metadata.py  eval.py  noxfile.py  pyproject.toml  rendering.mtl  requirements.txt  setup.sh  tmp.py
conf/: base.yaml  test.yaml  train.yaml
conf/dataset/: resnet.yaml  resnet_with_template.yaml  resnet_with_template_airplane.yaml  resnet_with_template_airplane_mini.yaml
conf/loss/: default.yaml  edge.yaml
conf/lr_scheduler/: cosine_annealing_warm_restarts.yaml  multi_step.yaml
conf/model/: pixel2mesh.yaml  pixel2mesh_with_depth.yaml  pixel2mesh_with_depth_3d_cnn.yaml  pixel2mesh_with_depth_3d_cnn_concat.yaml  pixel2mesh_with_depth_only.yaml  pixel2mesh_with_depth_only_3d_cnn.yaml  pixel2mesh_with_depth_resnet.yaml  pixel2mesh_with_depth_resnet_3d_cnn.yaml  pixel2mesh_with_template.yaml
conf/optim/: adam.yaml  sgd.yaml
examples/: point_clouds_knn.py  read_ellipsoid.py  visualize_mesh.py  visualize_pc_dat.py  visualize_point_cloud.py  visualize_template_mesh.py
experiments/: resnet.yml  resnet_with_template.yml
experiments/default/: resnet.yml
scripts/: test_loop.py
scripts/rendering/: .gitignore  Makefile  README.md  debug.py  main.py  pyproject.toml  run_recursively.py  setup.sh
scripts/rust/: .gitignore  Cargo.toml  README.md
scripts/rust/src/: lib.rs
src/: bbo.py  config.py  copy_metadata.py  entrypoint_eval.py  entrypoint_predict.py  entrypoint_train.py  test.py  train.py
src/p2m/: __init__.py  config.py  logger.py  options.py
src/p2m/datamodule/: base.py  pixel2mesh.py  pixel2mesh_with_depth.py  pixel2mesh_with_template.py
src/p2m/datasets/: base_dataset.py  imagenet.py  shapenet.py  shapenet_with_depth.py  shapenet_with_template.py
src/p2m/functions/: base.py  evaluator.py  predictor.py  saver.py  trainer.py
src/p2m/lightningmodule/: pixel2mesh.py  pixel2mesh_with_depth.py  pixel2mesh_with_template.py
src/p2m/models/: classifier.py  p2m.py  p2m_with_depth.py  p2m_with_depth_3d_cnn.py  p2m_with_template.py
src/p2m/models/backbones/: __init__.py  resnet.py  vgg16.py
src/p2m/models/layers/: chamfer_wrapper.py  gbottleneck.py  gconv.py  gpooling.py  gprojection.py
src/p2m/models/losses/: classifier.py  p2m.py  p2m_loss.py
src/p2m/utils/: average_meter.py  eval.py  logger.py  mesh.py  obj.py  pl_loggers.py  render.py  tensor.py
src/p2m/utils/demo_selection/: select_demo_images.py
src/p2m/utils/migrations/: delete_unnecessary_keys.py  extract_vgg_weights.py  from_p2m_pytorch.py  official_model_converter.py  tensorflow_to_pkl.py  validate_dataset_all.py
src/p2m/utils/vis/: renderer.py
