[tool.poetry]
name = "pixel2mesh-pytorch-noahcao"
version = "0.1.0"
description = ""
authors = ["pollenjp <polleninjp@gmail.com>"]
packages = [
    { include = "p2m", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.7,<3.11"
scikit-image = "0.15"
opencv-python = "^4.5.5"
easydict = "^1.9"
PyYAML = "^6.0"
tensorboardX = "^2.4.1"
trimesh = "^3.9.42"
Shapely = "^1.8.0"
Pillow = "6.1"
torch = { file = ".wheel/download.pytorch.org/whl/cu90/torch-1.1.0-cp37-cp37m-linux_x86_64.whl" }
torchvision = { file = ".wheel/download.pytorch.org/whl/cu90/torchvision-0.3.0-cp37-cp37m-manylinux1_x86_64.whl" }


[tool.poetry.dev-dependencies]
black = "^21.12b0"
flake8 = "^4.0.1"
autoflake8 = "^0.2.2"
isort = "^5.10.1"
mypy = "^0.931"
nox = "^2022.1.7"
tensorboard = "^2.8.0"

[tool.poetry.group.dev.dependencies]
types-pyyaml = "^6.0.12"
tensorboard = "^2.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
force_single_line = true
import_heading_stdlib      = "Standard Library"
import_heading_thirdparty  = "Third Party Library"
import_heading_firstparty  = "First Party Library"
import_heading_localfolder = "Local Library"

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
