[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "small-dataset-extraction"

[[bin]]
name = "trim-left"

[[bin]]
name = "split-dataset"

[[bin]]
name = "select-categories"

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
